--- a/Learn/front-end-libraries/front-end-libraries-projects/build-a-random-quote-machine/index.html
+++ b/Learn/front-end-libraries/front-end-libraries-projects/build-a-random-quote-machine/index.html
@@ -18,53 +18,16 @@
 <div id="app"></div>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <script>
-    const API = 'https://jsonplaceholder.typicode.com/todos/1';
-const API2 ='https://api.quotable.io/random';
-class App extends React.Component {
-  constructor(props) {
-    super(props);
-    this.state = {
-      content:'',
-      author: ''
-    };
-    this.updatecontent = this.updatecontent.bind(this);
-    this.fetchcontent = this.fetchcontent.bind(this);
-  }
-  componentDidMount() {
-    this.fetchcontent(); 
-  }
-  fetchcontent(){
-    fetch(API2)
-      .then(response => response.json())
-      .then(response => this.updatecontent(response));
-  }
-    updatecontent(response) {
-      this.setState({
-        content:response.content,
-        author: response.author
-      });
-      //console.log(this.state.quote);
-    }
-  render() {
-      const {content, author} = this.state;
-    return (<div id="quote-box">
-          <p id="text">{content}</p>
-           <div className="quote-author">
-            <span id="author">{author}</span>
-        </div>
-        <hr/>
-        <div className="buttons" >
-          <a id="tweet-quote" title="Tweet this quote!" target="_top" href={'https://twitter.com/intent/tweet?url=https://twitter.com?text=' + content}>
-              <i className="fa fa-twitter"></i>Tweet</a>
-          <button id="new-quote" onClick={this.fetchcontent}>Get quote</button>
-        </div>
-      </div>
-    );
-  }
-}
-ReactDOM.render(<App />, document.getElementById('app'))
+
 
 </script>
+<!-- Load React. -->
+<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
+<!-- Load our React component. -->
+<script  type="text/jsx" src="app.js"></script>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
