--- a/Learn/front-end-libraries/front-end-libraries-projects/Build a Markdown Previewer/index.html
+++ b/Learn/front-end-libraries/front-end-libraries-projects/Build a Markdown Previewer/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- Don't use this in production: -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <title>Build a Markdown Previewer</title>
 </head>
 <body>
